<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.artion.hyrnesistem.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="16sp"
                    android:hint="@string/rEmail"
                    android:inputType="textEmailAddress" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="16sp"
                    android:hint="@string/rFjalekalimi"
                    android:inputType="textPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textSize="12sp"
                    android:text="@string/forget"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    tools:ignore="SmallSp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="45dp"
                android:gravity="end"
                android:orientation="vertical">

                <Button
                    android:id="@+id/hyr"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/red"
                    android:text="@string/hyr"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/regjistrohu"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/light_grey"
                    android:foregroundGravity="bottom"
                    android:text="@string/registrohu"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
